[Feature]: Styling fix on the home page to fix apparent spacing between landing and carousel

--- a/client/src/Routes/Entry.css
+++ b/client/src/Routes/Entry.css
@@ -23,6 +23,7 @@
     align-items: center;
     width: 85%;
     text-align: center;
+    justify-content: center;
 }
 
 .appSummaryText{
